exports[`test does not render recoverableSchedule if it has a gateway 1`] = `
<div>
<Connect(SplitContainerWithoutData) nav={true} classes={{...}}>
<Meta title="Transfer Your Giving Schedule" />
<Right background="//s3.amazonaws.com/ns.assets/apollos/29516.marketing.cen.webad.thebestisyettocome_1x2.png" mobile={false} />
</Connect(SplitContainerWithoutData)>
<Left scroll={true} classes={{...}}>
<Link to="/give/schedules" className="locked-top locked-left soft-double@lap-and-up soft h7 text-dark-secondary plain" onlyActiveOnIndex={false} style={{...}}>
<i className="icon-arrow-back soft-half-right display-inline-block" style={{...}} />
<span className="display-inline-block" style={{...}}>
Back
</span>
</Link>
<div>
<div className="background--light-primary soft-half soft-sides@portable soft-double-sides@anchored soft-double-ends">
<div className="soft soft-double@lap-and-up push-top@lap-and-up">
<h2 className="soft-half-bottom">
Thank you 
jim
!
</h2>
<p>
<strong>
Your gift matters!
</strong>
</p>
<p>
We believe that every number has a name, every name has a story, and every story matters to God. Because you give, we are able to see thousands of life change stories every year at NewSpring Church. There is no organization with more potential to change the world than the local church. Thank you for being a difference maker!
</p>
<p>
<em>
“Every number has a name, every name has a story, and every story matters to God.”
</em>
</p>
</div>
</div>
</div>
</Left>
</div>
`;

exports[`test does not render recoverableSchedule if no account 1`] = `
<div>
<Connect(SplitContainerWithoutData) nav={true} classes={{...}}>
<Meta title="Transfer Your Giving Schedule" />
<Right background="//s3.amazonaws.com/ns.assets/apollos/29516.marketing.cen.webad.thebestisyettocome_1x2.png" mobile={false} />
</Connect(SplitContainerWithoutData)>
<Left scroll={true} classes={{...}}>
<Link to="/give/schedules" className="locked-top locked-left soft-double@lap-and-up soft h7 text-dark-secondary plain" onlyActiveOnIndex={false} style={{...}}>
<i className="icon-arrow-back soft-half-right display-inline-block" style={{...}} />
<span className="display-inline-block" style={{...}}>
Back
</span>
</Link>
<div>
<div className="background--light-primary soft-half soft-sides@portable soft-double-sides@anchored soft-double-top">
<div className="soft-ends soft-double-ends@lap-and-up push-top">
<h4 className="soft-half-sides soft-half-bottom">
Hey 
jim
!
</h4>
<h5 className="soft-half-sides">
We have found giving schedules from our previous giving system that need to be transferred! To transfer a schedule, click below and enter your payment details.
</h5>
</div>
</div>
<div className="soft-half soft-sides@portable soft-double-sides@anchored">
<div className="card">
<div className="card__item">
<p className="soft text-center soft-double-sides@lap-and-up hard-bottom">
<small>
<em>
Please be aware that your existing schedule will continue to charge the account on file until you transfer it to our new system.
</em>
</small>
</p>
</div>
</div>
</div>
</div>
</Left>
</div>
`;

exports[`test does not render recoverableSchedule if no details 1`] = `
<div>
<Connect(SplitContainerWithoutData) nav={true} classes={{...}}>
<Meta title="Transfer Your Giving Schedule" />
<Right background="//s3.amazonaws.com/ns.assets/apollos/29516.marketing.cen.webad.thebestisyettocome_1x2.png" mobile={false} />
</Connect(SplitContainerWithoutData)>
<Left scroll={true} classes={{...}}>
<Link to="/give/schedules" className="locked-top locked-left soft-double@lap-and-up soft h7 text-dark-secondary plain" onlyActiveOnIndex={false} style={{...}}>
<i className="icon-arrow-back soft-half-right display-inline-block" style={{...}} />
<span className="display-inline-block" style={{...}}>
Back
</span>
</Link>
<div>
<div className="background--light-primary soft-half soft-sides@portable soft-double-sides@anchored soft-double-top">
<div className="soft-ends soft-double-ends@lap-and-up push-top">
<h4 className="soft-half-sides soft-half-bottom">
Hey 
jim
!
</h4>
<h5 className="soft-half-sides">
We have found giving schedules from our previous giving system that need to be transferred! To transfer a schedule, click below and enter your payment details.
</h5>
</div>
</div>
<div className="soft-half soft-sides@portable soft-double-sides@anchored">
<div className="card">
<div className="card__item">
<p className="soft text-center soft-double-sides@lap-and-up hard-bottom">
<small>
<em>
Please be aware that your existing schedule will continue to charge the account on file until you transfer it to our new system.
</em>
</small>
</p>
</div>
</div>
</div>
</div>
</Left>
</div>
`;

exports[`test expands the schedule if it matches state 1`] = `
<div>
<Connect(SplitContainerWithoutData) nav={true} classes={{...}}>
<Meta title="Transfer Your Giving Schedule" />
<Right background="//s3.amazonaws.com/ns.assets/apollos/29516.marketing.cen.webad.thebestisyettocome_1x2.png" mobile={false} />
</Connect(SplitContainerWithoutData)>
<Left scroll={true} classes={{...}}>
<Link to="/give/schedules" className="locked-top locked-left soft-double@lap-and-up soft h7 text-dark-secondary plain" onlyActiveOnIndex={false} style={{...}}>
<i className="icon-arrow-back soft-half-right display-inline-block" style={{...}} />
<span className="display-inline-block" style={{...}}>
Back
</span>
</Link>
<div>
<div className="background--light-primary soft-half soft-sides@portable soft-double-sides@anchored soft-double-top">
<div className="soft-ends soft-double-ends@lap-and-up push-top">
<h4 className="soft-half-sides soft-half-bottom">
Hey 
jim
!
</h4>
<h5 className="soft-half-sides">
We have found giving schedules from our previous giving system that need to be transferred! To transfer a schedule, click below and enter your payment details.
</h5>
</div>
</div>
<div className="soft-half soft-sides@portable soft-double-sides@anchored">
<div className="card">
<div className="soft" onClick={[Function]} data-id="1" style={{...}}>
<div className="grid" style={{...}}>
<div className="grid__item two-thirds" style={{...}}>
<div className="display-inline-block" style={{...}}>
<h6 className="text-dark-tertiary push-half-bottom">
Test
</h6>
<h5 className="flush text-dark">
test account
</h5>
<p className="flush soft-half-top text-dark-tertiary">
<small>
<em>
This began on 
Dec 12, 2012
</em>
</small>
</p>
</div>
</div>
<div className="grid__item one-third text-right" style={{...}}>
<div className="soft-half-right">
<h4 className="text-dark-tertiary flush" style={{...}}>
$2
<span className="text-dark-tertiary icon-arrow-up locked" style={{...}} />
</h4>
</div>
</div>
</div>
</div>
<div className="text-light-primary soft outlined--light outlined--top flush one-whole">
<MeteorDataContainer accounts={{...}} existing={{...}} text="Transfer" onClick={[Function]} dataId="1" />
<h6 className="outlined--light outlined--bottom display-inline-block text-dark-tertiary push-top" style={{...}} onClick={[Function]} data-id="1">
Stop Contribution
</h6>
</div>
</div>
<div className="card">
<div className="card__item">
<p className="soft text-center soft-double-sides@lap-and-up hard-bottom">
<small>
<em>
Please be aware that your existing schedule will continue to charge the account on file until you transfer it to our new system.
</em>
</small>
</p>
</div>
</div>
</div>
</div>
</Left>
</div>
`;

exports[`test renders with props 1`] = `
<div>
<Connect(SplitContainerWithoutData) nav={true} classes={{...}}>
<Meta title="Transfer Your Giving Schedule" />
<Right background="//s3.amazonaws.com/ns.assets/apollos/29516.marketing.cen.webad.thebestisyettocome_1x2.png" mobile={false} />
</Connect(SplitContainerWithoutData)>
<Left scroll={true} classes={{...}}>
<Link to="/give/schedules" className="locked-top locked-left soft-double@lap-and-up soft h7 text-dark-secondary plain" onlyActiveOnIndex={false} style={{...}}>
<i className="icon-arrow-back soft-half-right display-inline-block" style={{...}} />
<span className="display-inline-block" style={{...}}>
Back
</span>
</Link>
<div>
<div className="background--light-primary soft-half soft-sides@portable soft-double-sides@anchored soft-double-top">
<div className="soft-ends soft-double-ends@lap-and-up push-top">
<h4 className="soft-half-sides soft-half-bottom">
Hey 
jim
!
</h4>
<h5 className="soft-half-sides">
We have found giving schedules from our previous giving system that need to be transferred! To transfer a schedule, click below and enter your payment details.
</h5>
</div>
</div>
<div className="soft-half soft-sides@portable soft-double-sides@anchored">
<div className="card">
<div className="soft" onClick={[Function]} data-id="1" style={{...}}>
<div className="grid" style={{...}}>
<div className="grid__item two-thirds" style={{...}}>
<div className="display-inline-block" style={{...}}>
<h6 className="text-dark-tertiary push-half-bottom">
Test
</h6>
<h5 className="flush text-dark">
test account
</h5>
<p className="flush soft-half-top text-dark-tertiary">
<small>
<em>
This began on 
Dec 12, 2012
</em>
</small>
</p>
</div>
</div>
<div className="grid__item one-third text-right" style={{...}}>
<div className="soft-half-right">
<h4 className="text-dark-tertiary flush" style={{...}}>
$2
<span className="text-dark-tertiary icon-arrow-up locked" style={{...}} />
</h4>
</div>
</div>
</div>
</div>
<div className="text-light-primary soft outlined--light outlined--top flush one-whole">
<MeteorDataContainer accounts={{...}} existing={{...}} text="Transfer" onClick={[Function]} dataId="1" />
<h6 className="outlined--light outlined--bottom display-inline-block text-dark-tertiary push-top" style={{...}} onClick={[Function]} data-id="1">
Stop Contribution
</h6>
</div>
</div>
<div className="card">
<div className="card__item">
<p className="soft text-center soft-double-sides@lap-and-up hard-bottom">
<small>
<em>
Please be aware that your existing schedule will continue to charge the account on file until you transfer it to our new system.
</em>
</small>
</p>
</div>
</div>
</div>
</div>
</Left>
</div>
`;

exports[`test renders without recoverableSchedules 1`] = `
<div>
<Connect(SplitContainerWithoutData) nav={true} classes={{...}}>
<Meta title="Transfer Your Giving Schedule" />
<Right background="//s3.amazonaws.com/ns.assets/apollos/29516.marketing.cen.webad.thebestisyettocome_1x2.png" mobile={false} />
</Connect(SplitContainerWithoutData)>
<Left scroll={true} classes={{...}}>
<Link to="/give/schedules" className="locked-top locked-left soft-double@lap-and-up soft h7 text-dark-secondary plain" onlyActiveOnIndex={false} style={{...}}>
<i className="icon-arrow-back soft-half-right display-inline-block" style={{...}} />
<span className="display-inline-block" style={{...}}>
Back
</span>
</Link>
<div>
<div className="background--light-primary soft-half soft-sides@portable soft-double-sides@anchored soft-double-ends">
<div className="soft soft-double@lap-and-up push-top@lap-and-up">
<h2 className="soft-half-bottom">
Thank you 
jim
!
</h2>
<p>
<strong>
Your gift matters!
</strong>
</p>
<p>
We believe that every number has a name, every name has a story, and every story matters to God. Because you give, we are able to see thousands of life change stories every year at NewSpring Church. There is no organization with more potential to change the world than the local church. Thank you for being a difference maker!
</p>
<p>
<em>
“Every number has a name, every name has a story, and every story matters to God.”
</em>
</p>
</div>
</div>
</div>
</Left>
</div>
`;

exports[`test works with nickName 1`] = `
<div>
<Connect(SplitContainerWithoutData) nav={true} classes={{...}}>
<Meta title="Transfer Your Giving Schedule" />
<Right background="//s3.amazonaws.com/ns.assets/apollos/29516.marketing.cen.webad.thebestisyettocome_1x2.png" mobile={false} />
</Connect(SplitContainerWithoutData)>
<Left scroll={true} classes={{...}}>
<Link to="/give/schedules" className="locked-top locked-left soft-double@lap-and-up soft h7 text-dark-secondary plain" onlyActiveOnIndex={false} style={{...}}>
<i className="icon-arrow-back soft-half-right display-inline-block" style={{...}} />
<span className="display-inline-block" style={{...}}>
Back
</span>
</Link>
<div>
<div className="background--light-primary soft-half soft-sides@portable soft-double-sides@anchored soft-double-top">
<div className="soft-ends soft-double-ends@lap-and-up push-top">
<h4 className="soft-half-sides soft-half-bottom">
Hey 
jimothy
!
</h4>
<h5 className="soft-half-sides">
We have found giving schedules from our previous giving system that need to be transferred! To transfer a schedule, click below and enter your payment details.
</h5>
</div>
</div>
<div className="soft-half soft-sides@portable soft-double-sides@anchored">
<div className="card">
<div className="soft" onClick={[Function]} data-id="1" style={{...}}>
<div className="grid" style={{...}}>
<div className="grid__item two-thirds" style={{...}}>
<div className="display-inline-block" style={{...}}>
<h6 className="text-dark-tertiary push-half-bottom">
Test
</h6>
<h5 className="flush text-dark">
test account
</h5>
<p className="flush soft-half-top text-dark-tertiary">
<small>
<em>
This began on 
Dec 12, 2012
</em>
</small>
</p>
</div>
</div>
<div className="grid__item one-third text-right" style={{...}}>
<div className="soft-half-right">
<h4 className="text-dark-tertiary flush" style={{...}}>
$2
<span className="text-dark-tertiary icon-arrow-up locked" style={{...}} />
</h4>
</div>
</div>
</div>
</div>
<div className="text-light-primary soft outlined--light outlined--top flush one-whole">
<MeteorDataContainer accounts={{...}} existing={{...}} text="Transfer" onClick={[Function]} dataId="1" />
<h6 className="outlined--light outlined--bottom display-inline-block text-dark-tertiary push-top" style={{...}} onClick={[Function]} data-id="1">
Stop Contribution
</h6>
</div>
</div>
<div className="card">
<div className="card__item">
<p className="soft text-center soft-double-sides@lap-and-up hard-bottom">
<small>
<em>
Please be aware that your existing schedule will continue to charge the account on file until you transfer it to our new system.
</em>
</small>
</p>
</div>
</div>
</div>
</div>
</Left>
</div>
`;
